add yolov5+motpy and yolov8 tracking

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,106 @@ data/*
 .vscode/
 *.weights
 *.pt
+*/__pycache__/*
+*/.ipynb_checkpoints/*
+*/.vscode/*
+*/.idea/*
+*/.pytest_cache/*
+*/.mypy_cache/*
+*/.coverage
+*/.coverage.*
+*/.cache/*
+*/.eggs/*
+*/.tox/*
+*/.nox/*
+*/.ropeproject/*
+*/.hypothesis/*
+*/.pytest_cache/*
+*/.mypy_cache/*
+*/.coverage
+*/.coverage.*
+*/.cache/*
+*/.eggs/*
+*/.tox/*
+*/.nox/*
+*/.ropeproject/*
+*/.hypothesis/*
+*/.pytest_cache/*
+*/.mypy_cache/*
+*/.coverage
+*/.coverage.*
+*/.cache/*
+*/.eggs/*
+*/.tox/*
+*/.nox/*
+*/.ropeproject/*
+*/.hypothesis/*
+*/.pytest_cache/*
+*/.mypy_cache/*
+*/.coverage
+*/.coverage.*
+*/.cache/*
+*/.eggs/*
+*/.tox/*
+*/.nox/*
+*/.ropeproject/*
+*/.hypothesis/*
+*/.pytest_cache/*
+*/.mypy_cache/*
+*/.coverage
+*/.coverage.*
+*/.cache/*
+*/.eggs/*
+*/.tox/*
+*/.nox/*
+*/.ropeproject/*
+*/.hypothesis/*
+*/.pytest_cache/*
+*/.mypy_cache/*
+*/.coverage
+*/.coverage.*
+*/.cache/*
+*/.eggs/*
+*/.tox/*
+*/.nox/*
+*/.ropeproject/*
+*/.hypothesis/*
+*/.pytest_cache/*
+*/.mypy_cache/*
+*/.coverage
+*/.coverage.*
+*/.cache/*
+*/.eggs/*
+*/.tox/*
+*/.nox/*
+*/.ropeproject/*
+*/.hypothesis/*
+*/.pytest_cache/*
+*/.mypy_cache/*
+*/.coverage
+*/.coverage.*
+*/.cache/*
+*/.eggs/*
+*/.tox/*
+*/.nox/*
+*/.ropeproject/*
+*/.hypothesis/*
+*/.pytest_cache/*
+*/.mypy_cache/*
+*/.coverage
+*/.coverage.*
+*/.cache/*
+*/.eggs/*
+*/.tox/*
+*/.nox/*
+*/.ropeproject/*
+*/.hypothesis/*
+*/.pytest_cache/*
+*/.mypy_cache/*
+*/.coverage
+*/.coverage.*
+*/.cache/*
+*/.eggs/*
+*/.tox/*
+*/.nox/*
+*/.ro
